crates/rome_formatter/tests/specs/prettier/js/comments/jsdoc.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: jsdoc.js

---
# Input
```js
/** @type {any} */
const x = (
    <div>
        <div />
    </div>
);

/**
 * @type {object}
 */
() => (
    <div>
        sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
    </div>
);

/**
 * @type {object}
 */
function HelloWorld() {
    return (
        <div>
           <span>Test</span>
        </div>
    );
}
```

# Output
```js
/** @type {any} */
const x = (
  <div>
        <div />
    </div>
);

/**
 * @type {object}
 */
() => (
  <div>
        sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
    </div>
);

/**
 * @type {object}
 */
function HelloWorld() {
  return (
    <div>
           <span>Test</span>
        </div>
  );
}

```

# Errors
```
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
=======
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> 9259ba1f51 (abandoning jsx if no closing element is found)
=======
>>>>>>> c87591329d (fixing rebase problems)
error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
=======
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
>>>>>>> 5e7841b546 (update rast/snap files)
  ┌─ jsdoc.js:3:5
  │  
3 │ ┌     <div>
4 │ │         <div />
<<<<<<< HEAD
  │ └───────────────^ TypeScript only syntax
<<<<<<< HEAD
<<<<<<< HEAD
=======
>>>>>>> a23ec66cbf (abandoning jsx if no closing element is found)
error[SyntaxError]: expected `')'` but instead found `div`
  ┌─ jsdoc.js:4:10
  │
4 │         <div />
  │          ^^^ unexpected
<<<<<<< HEAD
=======
>>>>>>> 0ae10e4634 (jsx in arrow functions and as statements)
=======
>>>>>>> 9259ba1f51 (abandoning jsx if no closing element is found)
>>>>>>> a23ec66cbf (abandoning jsx if no closing element is found)
=======
>>>>>>> c87591329d (fixing rebase problems)

error: unterminated regex literal
  ┌─ jsdoc.js:5:11
  │
5 │     </div>
  │      -    ^ ...but the line ends here
  │      │    
  │      a regex literal starts there...
=======
5 │ │     </div>
6 │ │ );
  │ └─^ JSX only syntax
>>>>>>> 5e7841b546 (update rast/snap files)

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ jsdoc.js:12:5
   │  
12 │ ┌     <div>
13 │ │         sajdfpoiasdjfpoiasdjfpoiasdjfpoiadsjfpaoisdjfapsdiofjapioisadfaskfaspiofjp
14 │ │     </div>
15 │ │ );
   │ └─^ JSX only syntax

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ jsdoc.js:22:9
   │  
22 │ ┌         <div>
23 │ │            <span>Test</span>
<<<<<<< HEAD
   │ └─────────────────────^ TypeScript only syntax

error: unterminated regex literal
   ┌─ jsdoc.js:24:15
   │
24 │         </div>
   │          -    ^ ...but the line ends here
   │          │    
   │          a regex literal starts there...

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ jsdoc.js:25:5
   │
25 │     );
   │     ^ Expected an expression here
=======
24 │ │         </div>
25 │ │     );
   │ └─────^ JSX only syntax
>>>>>>> 5e7841b546 (update rast/snap files)


```


